--- a/pom.xml
+++ b/pom.xml
@@ -54,4 +54,16 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <configuration>
+                    <mainClass>de.welt.task.Boot</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
